# iCub

./: .gitignore  README.md
AccCtrl/android/: settings.gradle
AccCtrl/android/accctrlr/: build.gradle
AccCtrl/android/accctrlr/src/main/: AndroidManifest.xml
AccCtrl/android/accctrlr/src/main/java/net/juxi/accctrlr/: MainActivity.java  Particle.java  SimulationView.java
AccCtrl/android/accctrlr/src/main/res/layout/: activity_main.xml  fragment_main.xml
AccCtrl/android/accctrlr/src/main/res/menu/: main.xml
AccCtrl/android/accctrlr/src/main/res/values/: strings.xml
AccCtrl/iOS/AccCtrlr/AccCtrlr/: AccCtrlr-Info.plist  AppDelegate.h  AppDelegate.m  MainViewController.m  main.m
AccCtrl/iOS/AccCtrlr/AccCtrlr.xcodeproj/: project.pbxproj
AccCtrl/iOS/AccCtrlr/AccCtrlr.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
AccCtrl/iOS/AccCtrlr/AccCtrlr.xcodeproj/project.xcworkspace/xcuserdata/juxi.xcuserdatad/: UserInterfaceState.xcuserstate
AccCtrl/iOS/AccCtrlr/AccCtrlr.xcodeproj/xcuserdata/juxi.xcuserdatad/xcschemes/: AccCtrlr.xcscheme  xcschememanagement.plist
AccCtrl/iOS/AccCtrlr/AccCtrlr/Base.lproj/: Main_iPhone.storyboard
GraspDemo/: CMakeLists.txt  HOWTO.txt  main.cpp
LEOGrasper/: CMakeLists.txt  HOWTO.txt  grasp-modules.yarp.xml  graspsettings.ini  hand_controller.cpp  hand_controller.h  main.cpp
LeapCtrlr/: CMakeLists.txt
LeapCtrlr/src/: leapmain.cpp  main.cpp
MoBeE/: CMakeLists.txt
MoBeE/src/: CMakeLists.txt
MoBeE/src/Apps/: CMakeLists.txt
MoBeE/src/Apps/KinematicModelDemo/: CMakeLists.txt  main.cpp  objectsoup.cpp  objectsoup.h
MoBeE/src/Apps/MoBeE_Model/: CMakeLists.txt  controller.cpp  controller.h  controllerRpcInterface.cpp  controllerRpcInterface.h  main.cpp  partController.cpp  partController.h
MoBeE/src/CMakeScripts/: FindSOLID.cmake
MoBeE/src/LibKinematicModel/: CMakeLists.txt  bodypart.cpp  bodypart.h  box.cpp  compositeobject.cpp  compositeobject.h  cylinder.cpp  glwidget.cpp  glwidget.h  interval.cpp  joint.cpp  joint_revolute.cpp  kintreenode.cpp  kintreenode.h  link.cpp  link.h  marker.h  model.cpp  model.h  modelexception.cpp  objectmover.cpp  primitiveobject.cpp  robot.cpp  robot.h  sphere.cpp  transformable.cpp  worldhandler.cpp  worldhandler.h  zphandler.cpp  zphandler.h
MoBeE/src/LibYarpModel/: CMakeLists.txt  constants.h  exception.h  worldRpcInterface.cpp  worldRpcInterface.h  yarpModel.cpp  yarpModel.h  yarpRobot.cpp  yarpRobot.h
MoBeE/xml/: Baxter.xml  icubSim.xml
SDLCtrlr/: CMakeLists.txt
SDLCtrlr/src/: dot.cpp  dot.h  main.cpp  sdl_helpers.cpp  sdl_helpers.h  sixaxis_helpers.cpp  sixaxis_helpers.h  timer.cpp  timer.h  yarp_helpers.cpp  yarp_helpers.h
YARPina/: YARPina.py  main.py
